--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 
@@ -5,11 +7,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
+  <title><%- title %></title>
 </head>
 
 <body>
   <div id="app"></div>
+    <%- indexData %>
+    <script>`<%- aspx %>`</script>
   <script type="module" src="/src/main.js"></script>
 </body>
 
